# ann_course

./: .gitignore  README.md  pyproject.toml
labs/lab01_cells/: README.md  ganglionic_cell.py  utils.py
labs/lab02_mlp/: README.md  mlp.py
labs/lab03_cnn/: README.md  cnn_fc.py
labs/lab04_unet/: README.md  unet.py  utils.py
labs/lab05_hparams/: README.md  hyperprameters_tuning.py  parameters_tuning.py
materials/: useful_resources.md
